testsuite/tests/backtrace/pr6920_why_at.reference
Fatal error: exception Stdlib.Exit
Raised at file "pr6920_why_at.ml", line 9, characters 35-45
Called from file "pr6920_why_at.ml", line 11, characters 2-11
Called from file "pr6920_why_at.ml", line 17, characters 2-6
